# src/modules/group/dtos/create-led-group.dto.ts
@@ -1,0 +1,24 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsNumber, IsString } from 'class-validator';
+
+export class CreateLedGroupDTO {
+  @IsNotEmpty()
+  @IsString()
+  @ApiProperty()
+  groupId: string;
+
+  @IsNotEmpty()
+  @IsNumber()
+  @ApiProperty({ example: 10.876143961570557 })
+  lat: number;
+
+  @IsNotEmpty()
+  @IsNumber()
+  @ApiProperty({ example: 106.80443585691286 })
+  lon: number;
+
+  @IsNotEmpty()
+  @IsString()
+  @ApiProperty({ example: 'LED_DEMO' })
+  name: string;
+}
