# src/modules/group/dtos/get-group-list.dto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class GetDetailGroupDTO {
+  @IsNotEmpty()
+  @IsString()
+  groupId: string;
+}
